# webui

./: .gitignore  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
src/webui/: app.py  templates.py
templates/: base.html
templates/pages/: index.html
